# think-link

./: .gitignore  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yml  tests.yml
app/: main.py
app/ai/: note_agent.py  notes_agent.py
app/db/: config.py  database.py
app/db/dao/: notes.py  tags.py
app/db/models/: __init__.py  mixins.py  note.py  note_tag.py  tag.py
app/routers/: ai.py  health.py  notes.py  rag.py  tags.py
app/schemas/: __init__.py  agents.py  note.py  rag.py  tag.py
app/services/: n8n.py  ollama.py  settings_n8n.py  settings_ollama.py
docker/: api.Dockerfile  postgres.Dockerfile  ui.Dockerfile
tests/: _types.py  _utils.py  conftest.py  test_health.py  test_notes.py  test_tags.py
ui/: agents.py  models.py  notes.py  tags.py  ui_main.py
ui/components/: chat.py  glasswall.py  zenbar.py
ui/styles/: chat.css  glasswall.css
