[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
api = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.112.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
]

dev = [
    "aiosqlite>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-env>=1.1.5",
    "ruff>=0.12.12",
]

ui = [
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_any_generics = true
allow_untyped_decorators = true
pretty = true
exclude = ["migration/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
    "tests",
]
env = [
    "N8N_DISABLED=true",
]
